example for param groups in deserializer with refs working
