# app/models/pet.rb
@@ -1,20 +1,14 @@
 class Pet < ApplicationRecord
-  class << self
-  #   def inject_param_group(kls)
-  #     kls.instance_eval do
-  #       Owner.inject_param_group(kls)
-  #
-  #       def_param_group :pet do
-  #         param :name, String, "Pet Name"
-  #         param :photo_url, String
-  #         param :status, String
-  #         param :owner, Hash do
-  #           param_group :owner
-  #         end
-  #       end
-  #     end
-  #   end
+  extend Apipie::DSL::Concern
 
+  def_param_group :pet_creation do
+    # TODO: add a param option to differentiate param vs ref name
+    param :pet_creation_request, Hash do
+      param :name, String
+    end
+  end
+
+  class << self
     def describe_own_properties
       [
         Apipie::prop(:name, 'string', description: 'Name of pet'),
